--- a/.github/workflows/sync-tutorial.yml
+++ b/.github/workflows/sync-tutorial.yml
@@ -3,16 +3,26 @@ name: Sync tutorial
 on:
   repository_dispatch:
     types:
-      - trigger
+      - trigger-tutorial-sync
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout self
+        uses: actions/checkout@v3
+        with:
+          ref: main
 
-      - name: test
+      - name: Checkout tutorial repo
+        uses: actions/checkout@v3
+        with:
+          repository: oluceps/bpf-developer-tutorial
+          ref: main
+
+      - name: Observe
         run: |
           echo "Workflow triggered"
+          ls -R bpf-developer-tutorial
+          ls -R eunomia.dev
