--- a/.github/workflows/sync-tutorial.yml
+++ b/.github/workflows/sync-tutorial.yml
@@ -14,16 +14,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
+          path: website
 
       - name: Checkout tutorial repo
         uses: actions/checkout@v3
         with:
           repository: oluceps/bpf-developer-tutorial
           ref: main
+          path: tutorial
 
       - name: Observe
         run: |
           echo "Workflow triggered"
           ls
-          # ls -R bpf-developer-tutorial
-          ls -R eunomia.dev
+          ls -R tutorial
+          ls -R website
