--- a/.github/workflows/sync-tutorial.yml
+++ b/.github/workflows/sync-tutorial.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Get timestamp
         id: get-time
-        run: echo "$(date +%Y%m%d%H%M)" >> $GITHUB_OUTPUT
+        run: echo "time=$(date +%Y%m%d%H%M)" >> $GITHUB_OUTPUT
       
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
@@ -44,5 +44,5 @@ jobs:
           body: >
             Update Report  
 
-            - update on ${{ steps.get-time.outputs.* }}
+            - update on ${{ steps.get-time.outputs.time }}
 
